--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ humanize
 gtts
 pykeyboard
 schedule
-sqlalchemy==1.3.23
 lottie
 numpy
 httpx
@@ -32,7 +31,7 @@ psutil
 dnspython
 psycopg2-binary
 ptable
-pyrogram
+pyrogram==2.0.53
 pymongo
 pyromod==1.1.0
 pytube
