--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ requests==2.28.2
 motor==3.0.0
 opencv-python-headless
 psutil
-dnspython
+dnspython==2.3.0
 psycopg2-binary
 pyrogram==2.0.53
 pymongo
