--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Naya Pyro",
+    "name": "Amang Ubot",
     "description": "Nothing Speciall !!!.",
     "logo": "https://telegra.ph//file/75acabea0a9cc6679c2d4.jpg",
     "keywords": ["telegram", "userbot", "pyrogram"],
